fix: safari alignment

--- a/src/assets/css/custom/utilities.css
+++ b/src/assets/css/custom/utilities.css
@@ -121,6 +121,7 @@
   justify-content: center;
   align-items: flex-start;
   position: relative;
+  text-align: left;
   margin: auto 0;
   padding: 5rem 0;
   max-width: 600px;
